<resources>
    <string name="app_name">Shopping Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="shopping_list">Shopping List</string>
    <string name="cart">Cart</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="settings_header">Settings</string>
    <string name="language_and_time_zone">Language and Time Zone</string>
    <string name="sign_out">Sign Out</string>
    <string name="notifications">Notifications</string>
    <string name="socials">Socials</string>
    <string name="change_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="account">Account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="morgan">Morgan</string>
    <string name="language">Language</string>
    <string name="arrow">arrow</string>
    <string name="morgan_hah">Morgan Hah</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="_5599_661_6611">+5599-661-6611</string>
    <string name="morganhah99_gmail_com">morganhah99@gmail.com</string>
    <string name="cards">Cards</string>
    <string name="profile_details">Profile Details</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="remove_from_cart">Remove from Cart</string>
    <string name="hello_world">HELLO WORLD</string>
    <string name="pokemon_list">Pokemon List</string>
</resources>