<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_logo"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category_logo"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_pokemonList"
            android:icon="@drawable/list_logo"
            android:title="@string/pokemon_list" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart_logo"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_logo"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/person_logo"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_logo"
            android:title="@string/settings" />


    </group>
</menu>