<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.shoppingapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.shoppingapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_listFragment"
            app:destination="@id/listFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.shoppingapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.shoppingapplication.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail" />
    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.shoppingapplication.ListFragment"
        android:label="fragment_list"
        tools:layout="@layout/fragment_list" />
    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.shoppingapplication.CategoryFragment"
        android:label="Category"
        tools:layout="@layout/fragment_category" />
    <fragment
        android:id="@+id/nav_shoppingList"
        android:name="com.example.shoppingapplication.ShoppingListFragment"
        android:label="Shopping List"
        tools:layout="@layout/fragment_shopping_list" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.shoppingapplication.CartFragment"
        android:label="Cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.shoppingapplication.HistoryFragment"
        android:label="History"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.shoppingapplication.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_settings"
            app:destination="@id/nav_settings" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.shoppingapplication.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />


</navigation>